Front end improvements

--- a/FrontEnd/extension/styles.css
+++ b/FrontEnd/extension/styles.css
@@ -20,3 +20,33 @@
   text-align: right;
   /* background-color: inherit; */
 }
+
+
+.kp-collapsible {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+}
+.kp-collapsible:after {
+  content: '\02795'; /* Unicode character for "plus" sign (+) */
+  font-size: 13px;
+  color: white;
+  float: right;
+  margin-left: 5px;
+}
+.active, .kp-collapsible:hover {
+  background-color: #ccc;
+}
+.triangle-right {
+	width: 0;
+	height: 0;
+	border-top: 25px solid transparent;
+	border-left: 50px solid #555;
+	border-bottom: 25px solid transparent;
+}
